[metadata]
name = pydokan
version = 0.1.0
summary =  Dokan binging for python
description-file =
    README.rst
author = Eugene Frolov
author-email = eugene@frolov.net.ru
home-page = http://pydokan.synapse.net.ru/
classifier =
    Environment :: pydokan
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
